link all files back to homepage

--- a/github-workflow.html
+++ b/github-workflow.html
@@ -45,25 +45,25 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/home.html">Home</a>
+                        <a class="nav-link" href="home.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/centralized-workflow.html">Centralized Workflow</a>
+                        <a class="nav-link" href="centralized-workflow.html">Centralized Workflow</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/gitflow-workflow.html">Gitflow Workflow</a>
+                        <a class="nav-link" href="gitflow-workflow.html">Gitflow Workflow</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/feature-branch-workflow.html">Feature Branch Workflow</a>
+                        <a class="nav-link" href="feature-branch-workflow.html">Feature Branch Workflow</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/github-workflow.html">GitHub Workflow</a>
+                        <a class="nav-link active" href="github-workflow.html">GitHub Workflow</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/trunk-based-development.html">Trunk-Based Development</a>
+                        <a class="nav-link" href="trunk-based-development.html">Trunk-Based Development</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/forking-workflow.html">Forking Workflow</a>
+                        <a class="nav-link" href="forking-workflow.html">Forking Workflow</a>
                     </li>
                 </ul>
             </div>
