--- a/trunk-based-development.html
+++ b/trunk-based-development.html
@@ -66,7 +66,7 @@
     <!-- Bootstrap navbar (bg-primary) -->
     <nav class="navbar navbar-expand-md navbar-dark bg-primary mb-4">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/home.html">Home</a>
+        <a class="navbar-brand" href="home.html">Home</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -81,22 +81,22 @@
         <div class="collapse navbar-collapse" id="mainNav">
           <ul class="navbar-nav ms-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link" href="/centralized-workflow.html"
+              <a class="nav-link" href="centralized-workflow.html"
                 >Centralized Workflow</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/gitflow-workflow.html"
+              <a class="nav-link" href="gitflow-workflow.html"
                 >Gitflow Workflow</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/feature-branch-workflow.html"
+              <a class="nav-link" href="feature-branch-workflow.html"
                 >Feature Branch Workflow</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/github-workflow.html"
+              <a class="nav-link" href="github-workflow.html"
                 >GitHub Workflow</a
               >
             </li>
@@ -104,12 +104,12 @@
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="/trunk-based-development.html"
+                href="trunk-based-development.html"
                 >Trunk-Based Development</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/forking-workflow.html"
+              <a class="nav-link" href="forking-workflow.html"
                 >Forking Workflow</a
               >
             </li>
