--- a/centralized-workflow.html
+++ b/centralized-workflow.html
@@ -2,37 +2,201 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Centralized Workflow</title>
-    <!-- Bootstrap CSS -->
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <script>
+      (function () {
+        try {
+          var stored = localStorage.getItem("theme");
+          if (stored) {
+            document.documentElement.setAttribute("data-theme", stored);
+          } else if (
+            window.matchMedia &&
+            window.matchMedia("(prefers-color-scheme: dark)").matches
+          ) {
+            document.documentElement.setAttribute("data-theme", "dark");
+          }
+        } catch (e) {
+          /* ignore */
+        }
+      })();
+    </script>
+    <style>
+      :root {
+        --brand: #0d6efd;
+        --muted: #6c757d;
+        --page-bg: #e9eef3;
+        --page-bg-start: #f3f6f9;
+        --container-bg: #f8fafc;
+        --max-width: 900px;
+        --text: #1f2937;
+        --muted-2: #55606a;
+        --pre-bg: linear-gradient(180deg, #eef6fb, #e6eef7);
+        --pre-color: #05242e;
+        --hr-color: rgba(31, 41, 55, 0.18);
+        --container-border: rgba(2, 6, 23, 0.06);
+        --toc-bg: #f6f9fc;
+        --node-bg: #ffffff;
+        --node-border: rgba(2, 6, 23, 0.06);
+        --card-bg: #ffffff;
+        --card-border: rgba(2, 6, 23, 0.1);
+        --card-shadow: rgba(2, 6, 23, 0.08);
+      }
+      [data-theme="dark"] {
+        --brand: #38bdf8;
+        --muted: #94a3b8;
+        --page-bg: #071028;
+        --page-bg-start: #030617;
+        --container-bg: linear-gradient(
+          180deg,
+          rgba(10, 18, 30, 0.96),
+          rgba(6, 12, 22, 0.95)
+        );
+        --max-width: 900px;
+        --text: #e6eef8;
+        --muted-2: #9aa6b2;
+        --pre-bg: linear-gradient(180deg, #00121a, #051421);
+        --pre-color: #d9eefc;
+        --hr-color: rgba(255, 255, 255, 0.08);
+        --container-border: rgba(255, 255, 255, 0.03);
+        --toc-bg: rgba(255, 255, 255, 0.02);
+        --node-bg: rgba(255, 255, 255, 0.03);
+        --node-border: rgba(255, 255, 255, 0.03);
+        --card-bg: rgba(255, 255, 255, 0.04);
+        --card-border: rgba(255, 255, 255, 0.05);
+        --card-shadow: rgba(0, 0, 0, 0.2);
+      }
+      html {
+        min-height: 100%;
+        scroll-behavior: smooth;
+      }
+      body {
+        min-height: 100vh;
+        margin: 0;
+        font-family: "Inter", system-ui, -apple-system, "Segoe UI", Roboto,
+          "Helvetica Neue", Arial;
+        background: linear-gradient(
+          180deg,
+          var(--page-bg-start),
+          var(--page-bg) 40%
+        );
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        color: var(--text);
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        padding: 2rem 1rem;
+      }
+      .doc-container {
+        max-width: var(--max-width);
+        margin: 0 auto;
+        background: var(--container-bg);
+        padding: 2.25rem 2.5rem;
+        box-shadow: 0 10px 40px rgba(2, 6, 23, 0.06);
+        border-radius: 12px;
+        border: 1px solid var(--container-border);
+      }
+      header .title {
+        font-weight: 700;
+        letter-spacing: -0.5px;
+        font-size: 1.75rem;
+        color: var(--text);
+      }
+      header .subtitle {
+        color: var(--muted-2);
+        margin-top: 0.25rem;
+      }
+      hr {
+        border: 0;
+        border-top: 1px solid var(--hr-color);
+        height: 0;
+        margin: 1rem 0 1.25rem;
+        opacity: 1;
+      }
+      a {
+        color: var(--brand);
+      }
+      @media print {
+        body {
+          background: white;
+          padding: 0;
+          color: black;
+        }
+        .doc-container {
+          box-shadow: none;
+          border-radius: 0;
+          padding: 0.75in;
+          background: white;
+          color: black;
+        }
+      }
+    </style>
   </head>
-  <body class="d-flex flex-column min-vh-100">
-    <!-- Bootstrap Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/home.html">SDLC Automation:<br>Plan & Code</a>
-        <button id=collapseButton class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="true" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="home.html">Workflows</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#mainNav"
+          aria-controls="mainNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-					  <a class="nav-link" href="/home.html">Home</a>
-					  <a class="nav-link active" aria-current="/centralized-workflow.html">Centralized Workflow</a>
-					  <a class="nav-link" href="/gitflow-workflow.html">Gitflow Workflow</a>
-            <a class="nav-link" href="/feature-branch-workflow.html">Feature Branch Workflow</a>
-            <a class="nav-link" href="/github-workflow.html">GitHub Workflow</a>
-            <a class="nav-link" href="/trunk-based-development.html">Trunk-Based Development</a>
-            <a class="nav-link" href="/forking-workflow.html">Forking Workflow</a>
-          </div>
+        <div class="collapse navbar-collapse" id="mainNav">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="home.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#"
+                >Centralized Workflow</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="gitflow-workflow.html"
+                >Gitflow Workflow</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="feature-branch-workflow.html"
+                >Feature Branch Workflow</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="github-workflow.html"
+                >GitHub Workflow</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="trunk-based-development.html"
+                >Trunk-Based Development</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="forking-workflow.html"
+                >Forking Workflow</a
+              >
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
 
-    <main class="container my-5">
+    <main class="doc-container" role="main">
       <h1 class="mb-3 text-center">Centralized Workflow</h1>
       <p class="lead">
         This page describes a centralized workflow approach for managing issues
@@ -205,20 +369,62 @@
       </section>
     </main>
 
-    <!-- Bootstrap JS Bundle -->
-    <!-- Footer -->
     <footer class="bg-dark text-white py-3 mt-auto">
       <div class="container text-center">
         <p class="mb-0">Ryan Cooper &copy; <span id="currentYear"></span></p>
       </div>
     </footer>
-
     <script>
       // Fill current year in footer
       document.getElementById("currentYear").textContent =
         new Date().getFullYear();
+      // Theme toggle logic: updates documentElement data-theme and saves to localStorage
+      (function () {
+        var toggle = function (next) {
+          try {
+            localStorage.setItem("theme", next);
+          } catch (e) {}
+          document.documentElement.setAttribute("data-theme", next);
+          updateButton(next);
+        };
+        var updateButton = function (theme) {
+          var btn = document.getElementById("theme-toggle");
+          var label = document.getElementById("theme-label");
+          if (!btn || !label) return;
+          if (theme === "dark") {
+            btn.innerHTML = '🌙 <span id="theme-label">Dark</span>';
+            btn.className = "btn btn-sm btn-outline-light";
+            btn.setAttribute("aria-pressed", "true");
+          } else {
+            btn.innerHTML = '☀️ <span id="theme-label">Light</span>';
+            btn.className = "btn btn-sm btn-outline-secondary";
+            btn.setAttribute("aria-pressed", "false");
+          }
+        };
+        document.addEventListener("DOMContentLoaded", function () {
+          var el = document.documentElement;
+          var current =
+            el.getAttribute("data-theme") ||
+            localStorage.getItem("theme") ||
+            (window.matchMedia &&
+            window.matchMedia("(prefers-color-scheme: dark)").matches
+              ? "dark"
+              : "light");
+          el.setAttribute("data-theme", current);
+          updateButton(current);
+          var btn = document.getElementById("theme-toggle");
+          if (btn) {
+            btn.addEventListener("click", function () {
+              var next =
+                document.documentElement.getAttribute("data-theme") === "dark"
+                  ? "light"
+                  : "dark";
+              toggle(next);
+            });
+          }
+        });
+      })();
     </script>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
