--- a/forking-workflow.html
+++ b/forking-workflow.html
@@ -219,7 +219,7 @@
     <!-- Primary navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Workflows</a>
+        <a class="navbar-brand" href="home.html">Workflows</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -234,30 +234,30 @@
         <div class="collapse navbar-collapse" id="mainNav">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="/home.html">Home</a>
+              <a class="nav-link" href="home.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/centralized-workflow.html"
+              <a class="nav-link" href="centralized-workflow.html"
                 >Centralized Workflow</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/gitflow-workflow.html"
+              <a class="nav-link" href="gitflow-workflow.html"
                 >Gitflow Workflow</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/feature-branch-workflow.html"
+              <a class="nav-link" href="feature-branch-workflow.html"
                 >Feature Branch Workflow</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/github-workflow.html"
+              <a class="nav-link" href="github-workflow.html"
                 >GitHub Workflow</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/trunk-based-development.html"
+              <a class="nav-link" href="trunk-based-development.html"
                 >Trunk-Based Development</a
               >
             </li>
