--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Feature Branch Workflow</title>
+    <title>Git Workflows</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -30,6 +30,7 @@
       })();
     </script>
     <style>
+      /* Light theme (default) */
       :root {
         --brand: #0d6efd;
         --muted: #6c757d;
@@ -50,6 +51,8 @@
         --card-border: rgba(2, 6, 23, 0.1);
         --card-shadow: rgba(2, 6, 23, 0.08);
       }
+
+      /* Dark theme overrides */
       [data-theme="dark"] {
         --brand: #38bdf8;
         --muted: #94a3b8;
@@ -74,6 +77,7 @@
         --card-border: rgba(255, 255, 255, 0.05);
         --card-shadow: rgba(0, 0, 0, 0.2);
       }
+
       html {
         min-height: 100%;
         scroll-behavior: smooth;
@@ -96,6 +100,7 @@
         -moz-osx-font-smoothing: grayscale;
         padding: 2rem 1rem;
       }
+
       .doc-container {
         max-width: var(--max-width);
         margin: 0 auto;
@@ -105,6 +110,7 @@
         border-radius: 12px;
         border: 1px solid var(--container-border);
       }
+
       header .title {
         font-weight: 700;
         letter-spacing: -0.5px;
@@ -115,6 +121,7 @@
         color: var(--muted-2);
         margin-top: 0.25rem;
       }
+
       hr {
         border: 0;
         border-top: 1px solid var(--hr-color);
@@ -122,9 +129,59 @@
         margin: 1rem 0 1.25rem;
         opacity: 1;
       }
+
+      .workflow-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 1.5rem;
+        margin-top: 2rem;
+      }
+
+      .workflow-card {
+        background: var(--card-bg);
+        border: 1px solid var(--card-border);
+        border-radius: 8px;
+        padding: 1.5rem;
+        text-decoration: none;
+        color: var(--text);
+        transition: all 0.3s ease;
+        box-shadow: 0 2px 8px var(--card-shadow);
+      }
+
+      .workflow-card:hover {
+        transform: translateY(-4px);
+        box-shadow: 0 8px 16px var(--card-shadow);
+        border-color: var(--brand);
+      }
+
+      .workflow-card h3 {
+        color: var(--brand);
+        margin: 0 0 0.5rem;
+        font-size: 1.1rem;
+        font-weight: 600;
+      }
+
+      .workflow-card p {
+        color: var(--muted-2);
+        font-size: 0.95rem;
+        margin: 0;
+        line-height: 1.5;
+      }
+
+      .intro {
+        margin-bottom: 1.5rem;
+      }
+
+      .lead {
+        font-size: 1.05rem;
+        color: var(--text);
+      }
+
       a {
         color: var(--brand);
       }
+
+      /* Print-friendly adjustments */
       @media print {
         body {
           background: white;
@@ -138,10 +195,19 @@
           background: white;
           color: black;
         }
+        .workflow-card {
+          background: #f7f7f7;
+          border-color: #ddd;
+          page-break-inside: avoid;
+        }
+        .workflow-card h3 {
+          color: #222;
+        }
       }
     </style>
   </head>
   <body>
+    <!-- Primary navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="home.html">Workflows</a>
@@ -159,7 +225,7 @@
         <div class="collapse navbar-collapse" id="mainNav">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="home.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="centralized-workflow.html"
@@ -172,7 +238,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"
+              <a class="nav-link" href="feature-branch-workflow.html"
                 >Feature Branch Workflow</a
               >
             </li>
@@ -195,65 +261,89 @@
         </div>
       </div>
     </nav>
+
     <main class="doc-container" role="main">
-      <header>
-        <div>
-          <h1>Feature Branch Workflow in Git</h1>
-          <p class="lead"><strong>By Tristan Johnson</strong> 10/24/2025</p>
+      <header class="d-flex flex-column mb-3">
+        <div class="d-flex justify-content-between align-items-start">
+          <div>
+            <h1 class="title">Git Workflows</h1>
+            <div class="subtitle">
+              Explore different Git collaboration workflows and best practices
+            </div>
+          </div>
+          <div>
+            <button
+              id="theme-toggle"
+              class="btn btn-sm btn-outline-secondary"
+              aria-pressed="false"
+              title="Toggle theme"
+            >
+              🌙 <span id="theme-label">Dark</span>
+            </button>
+          </div>
         </div>
+        <hr />
       </header>
-      <section>
-        <p>
-          The Feature Branch Workflow is a popular Git strategy that helps teams
-          keep their codebase clean, stable, and organized. Instead of working
-          directly on the <code>main</code> branch, developers spin off
-          dedicated branches for each new feature or bugfix. This isolates
-          changes, reduces conflicts, and makes collaboration smoother.
-        </p>
-        <p>
-          In many setups, there's a <code>develop</code> branch that acts as a
-          staging ground for new features. Developers create feature branches
-          from <code>develop</code>, work independently, and then merge back
-          into <code>develop</code> once the feature is complete. After
-          integration testing, <code>develop</code> is merged into
-          <code>main</code> for release.
-        </p>
-        <p>
-          This workflow pairs perfectly with pull requests, continuous
-          integration, and code reviews. It encourages clean commits, traceable
-          history, and safer deployments—especially when multiple features are
-          in flight.
+
+      <section class="intro">
+        <p class="lead">
+          Choose a workflow that best fits your team's collaboration style and
+          project requirements. Each workflow has unique advantages and is
+          suited for different team structures and project types.
         </p>
       </section>
-      <section>
-        <h2>Example</h2>
-        <p>
-          Let's say you're building a login feature. Here's how the flow would
-          look:
-        </p>
-        <ol>
-          <li>Start from the <code>develop</code> branch.</li>
-          <li>Create a new branch called <code>feature/login</code>.</li>
-          <li>Commit your changes to <code>feature/login</code>.</li>
-          <li>
-            Open a pull request to merge <code>feature/login</code> into
-            <code>develop</code>.
-          </li>
-          <li>After testing and review, merge into <code>develop</code>.</li>
-          <li>
-            Once all features are ready, merge <code>develop</code> into
-            <code>main</code> and tag the release (e.g., <code>1.1.0</code>).
-          </li>
-        </ol>
-      </section>
-      <section>
-        <h2>Branching Diagram</h2>
-        <img
-          src="feature-branch-workflow/feature-branch-workflow-diagram.png"
-          alt="Feature Branch Workflow Diagram"
-        />
-      </section>
+
+      <div class="workflow-grid">
+        <a href="centralized-workflow.html" class="workflow-card">
+          <h3>Centralized Workflow</h3>
+          <p>
+            A simple workflow where all developers work on a single main branch.
+            Ideal for small teams and straightforward projects.
+          </p>
+        </a>
+
+        <a href="gitflow-workflow.html" class="workflow-card">
+          <h3>Gitflow Workflow</h3>
+          <p>
+            A strict branching model with develop and main branches. Perfect for
+            projects with scheduled releases and multiple versions.
+          </p>
+        </a>
+
+        <a href="feature-branch-workflow.html" class="workflow-card">
+          <h3>Feature Branch Workflow</h3>
+          <p>
+            Developers create feature branches for each task. Encourages
+            collaboration through pull requests and code review.
+          </p>
+        </a>
+
+        <a href="github-workflow.html" class="workflow-card">
+          <h3>GitHub Workflow</h3>
+          <p>
+            A lightweight workflow optimized for continuous deployment. Main
+            branch is always deployable.
+          </p>
+        </a>
+
+        <a href="trunk-based-development.html" class="workflow-card">
+          <h3>Trunk-Based Development</h3>
+          <p>
+            Developers commit frequently to a single trunk. Emphasizes
+            integration testing and continuous delivery.
+          </p>
+        </a>
+
+        <a href="forking-workflow.html" class="workflow-card">
+          <h3>Forking Workflow</h3>
+          <p>
+            Contributors work on personal forks without direct access to the
+            upstream repository. Ideal for open-source projects.
+          </p>
+        </a>
+      </div>
     </main>
+
     <script>
       // Theme toggle logic: updates documentElement data-theme and saves to localStorage
       (function () {
@@ -264,6 +354,7 @@
           document.documentElement.setAttribute("data-theme", next);
           updateButton(next);
         };
+
         var updateButton = function (theme) {
           var btn = document.getElementById("theme-toggle");
           var label = document.getElementById("theme-label");
@@ -278,6 +369,7 @@
             btn.setAttribute("aria-pressed", "false");
           }
         };
+
         document.addEventListener("DOMContentLoaded", function () {
           var el = document.documentElement;
           var current =
@@ -289,6 +381,7 @@
               : "light");
           el.setAttribute("data-theme", current);
           updateButton(current);
+
           var btn = document.getElementById("theme-toggle");
           if (btn) {
             btn.addEventListener("click", function () {
