--- a/trunk-based-development.html
+++ b/trunk-based-development.html
@@ -4,17 +4,20 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Trunk-Based Development</title>
-    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap"
+      rel="stylesheet"
+    />
     <style>
       body {
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+        font-family: "Inter", system-ui, -apple-system, "Segoe UI", Roboto,
           "Helvetica Neue", Arial;
-        line-height: 1.6;
-        margin: 2rem;
+        margin: 0;
+        padding: 2rem 1rem;
         color: #222;
         background: #fff;
       }
@@ -46,27 +49,15 @@
         padding: 0.5rem 1rem;
         margin: 1rem 0;
       }
-      /* Navbar link styling: uniform font/size and spacing */
-      .navbar .nav-link {
-        font-size: 1rem;
-        font-weight: 500;
-        letter-spacing: 0.2px;
-        padding-left: 0.8rem;
-        padding-right: 0.8rem;
-      }
       .navbar .nav-link:hover {
         color: #e6f3ff;
-      }
-      .navbar .navbar-brand {
-        font-weight: 600;
       }
     </style>
   </head>
   <body>
-    <!-- Bootstrap navbar (bg-primary) -->
-    <nav class="navbar navbar-expand-md navbar-dark bg-primary mb-4">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/home.html">Home</a>
+        <a class="navbar-brand" href="home.html">Workflows</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -79,37 +70,37 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="mainNav">
-          <ul class="navbar-nav ms-auto mb-2 mb-md-0">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="/centralized-workflow.html"
+              <a class="nav-link" href="home.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="centralized-workflow.html"
                 >Centralized Workflow</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/gitflow-workflow.html"
+              <a class="nav-link" href="gitflow-workflow.html"
                 >Gitflow Workflow</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/feature-branch-workflow.html"
+              <a class="nav-link" href="feature-branch-workflow.html"
                 >Feature Branch Workflow</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/github-workflow.html"
+              <a class="nav-link" href="github-workflow.html"
                 >GitHub Workflow</a
               >
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="/trunk-based-development.html"
+              <a class="nav-link active" aria-current="page" href="#"
                 >Trunk-Based Development</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/forking-workflow.html"
+              <a class="nav-link" href="forking-workflow.html"
                 >Forking Workflow</a
               >
             </li>
